<resources>
    <string name="app_name">Bedu Store</string>
    <!-- LogIn and Register -->
    <string name="login">LogIn</string>
    <string name="signuphere">Dont have account? Click here</string>
    <string name="loginButton">LOGIN</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signup">Register</string>
    <string name="loginhere">Alredy have an account? Click here</string>
    <!-- MyCart -->
    <string name="deleteProduct">Delete</string>

    <!-- MyAccount -->
    <string name="nombre_usuario">Hello User!</string>
    <string name="level">Level 2</string>
    <string name="number_purchases">8</string>
    <string name="purchases">Purchases</string>
    <string name="number_points">42,6</string>
    <string name="points">Points</string>
    <string name="Fullname">Full Name</string>
    <string name="name">Mateo Kovacic</string>
    <string name="cellphone">Cell Phone</string>
    <string name="cel">5582050</string>
    <string name="mail">mateo@gmail.com</string>
    <string name="myPurchases">My Purchases</string>


    <string name="mis_compras">Mis Compras</string>
    <string name="categorias">Categorias</string>
    <string name="pagar">¿Como quieres pagar?</string>
    <string name="list_item_status_entregado">Entregado</string>
    <string name="list_item_status_cancelado">Compra cancelada</string>
    <string name="ej_list_item">Ejemplo de producto</string>
    <string name="ej_list_item_categoria">Categoria ejemplo</string>
    <string name="con_mercado_pago">Con Mercado Pago</string>
    <string name="con_otras_formas_pago">Con otras formas de pago</string>
    <string name="ej_list_item_tarjeta_credito">Debito Banco de Mexico</string>
    <string name="ej_pago_efectivo">Dinero en efectivo</string>
    <string name="ej_list_item_tarjeta_credito_dos">Credito Banco de Mexico</string>
    <string name="ej_list_item_tarjeta_credito_tres">Platino Banco de Mexico</string>

    <string name="nombre">Nombre y Apellidos</string>
    <string name="celular">55 5555 5555</string>
    <string name="correo">usuario@gmail.com</string>
    <string name="direccion">dirección</string>
    <string name="precio_total">$ 330.00</string>

    <string name="payed">payed</string>
    <string name="confirm_btn">confirm</string>
    <string name="continue_btn">continue</string>
    <string name="thanks_for_buy">Thanks for buy</string>

    <string name="quantityProduct">Quantity:</string>
    <string name="minusQuantity">-</string>
    <string name="plusQuantity">+</string>
    <string name="size">Size:</string>
    <string name="sizeS">S</string>
    <string name="sizeM">M</string>
    <string name="sizeL">L</string>
    <string name="buyNow">Buy now</string>
    <string name="addToCart">Add to cart</string>
    <string name="addToFavorites">Add to favorites</string>
    <!-- AppBar -->
    <string name="shopHeader">Home</string>
    <string name="favoritesHeader">Favorites</string>
    <string name="myCartHeader">My Cart</string>
    <string name="myAccountHeader">My Account</string>
    <string name="addToShoppingCard">Add to Shopping Cart</string>
    <string name="alert">Alerts Enabled/Disabled</string>
    <string name="settings">Settings</string>
    <string name="deleteAll">Delete All Products</string>
    <string name="logout">Log Out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeHeader">Shop</string>
    <string name="men">Men</string>
    <string name="women">Women</string>
    <string name="kids">Kids</string>
    <string name="description_home_card">Checa la nueva colección disponible.</string>
    <string name="trending">TRENDING</string>
    <string name="promotion">Products with irresistible end-of-season prices</string>
</resources>