<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--Encabezado -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/headerHomeMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        </androidx.core.widget.NestedScrollView>
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/headerHome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:liftOnScroll="true"
            app:layout_constraintEnd_toEndOf="parent">
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:expandedTitleGravity="bottom"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                >
                <androidx.appcompat.widget.Toolbar
                    app:navigationIcon="@drawable/cart_outline"
                    android:id="@+id/shop_bar"
                    style="@style/Widget.Toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:title="@string/app_name">
                    <TextView
                        android:layout_gravity="center"
                        style="@style/Toolbar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/homeHeader"/>
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/categoriesSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerHomeMenu"
        android:paddingVertical="24dp"
        >
        <LinearLayout
            android:id="@+id/menSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/womenSection"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMen"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:gravity="center"
                android:textAllCaps="true"
                app:backgroundTint="@color/lightYellow"
                app:icon="@drawable/ic_baseline_star_48"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconTint="@color/darkYellow"
                app:strokeColor="@color/blackColor"
                app:strokeWidth="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/men"
                android:textColor="@color/blackColor"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/womenSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/kidsSection"
            app:layout_constraintStart_toEndOf="@id/menSection"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnWomen"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textAllCaps="true"
                app:backgroundTint="@color/lightOrange"
                app:icon="@drawable/ic_baseline_star_48"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconTint="@color/darkOrange"
                app:strokeColor="@color/blackColor"
                app:strokeWidth="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/women"
                android:textColor="@color/blackColor"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/kidsSection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/womenSection"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnKids"
                android:layout_width="88dp"
                android:layout_height="88dp"
                android:gravity="center"
                android:textAllCaps="true"
                app:backgroundTint="@color/lightGreen"
                app:icon="@drawable/ic_baseline_star_48"
                app:iconGravity="textStart"
                app:iconPadding="10dp"
                app:iconTint="@color/darkGreen"
                app:strokeColor="@color/blackColor"
                app:strokeWidth="3dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/kids"
                android:textColor="@color/blackColor"
                android:textSize="24sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/AutoSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".HomeFragment"
        app:layout_constraintTop_toBottomOf="@+id/categoriesSection"
        >

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/imageSlider"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:sliderAnimationDuration="4000"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="4000"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorSelectedColor="#5A5A5A"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@+id/AutoSlider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/trending_background">

        <TextView
            android:layout_margin="10dp"
            android:id="@+id/textTrending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/white_rectangle_background"
            android:paddingStart="8dp"
            android:paddingTop="2dp"
            android:paddingEnd="8dp"
            android:paddingBottom="2dp"
            android:text="@string/trending"
            android:textColor="@color/blackColor"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            >

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="3"
            android:text="@string/promotion"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintEnd_toStartOf="@+id/textTrending"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>