<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightGray"
    tools:context=".MyAccount">

    <!--Encabezado -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="16dp"
        android:background="@color/white">

        <ImageView
            android:layout_toLeftOf="@id/Account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cart_outline" />
        <TextView
            android:id="@+id/Account"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="My Account"
            android:textSize="27sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:paddingHorizontal="40dp" />
        <ImageView
            android:layout_toRightOf="@id/Account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cog" />
    </RelativeLayout>

    <!--Nombre y Foto del Usuario -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="16dp"
        android:gravity="center"
        android:background="@color/white">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/account_circle"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="40dp"
            android:text="@string/nombre_usuario"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!--Información de cuenta -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp"
        android:layout_marginTop="12dp"
        android:background="@color/lightGray">

        <TextView
            android:layout_toLeftOf="@id/Cupones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Compras"
            android:textColor="@color/black"
            android:textSize="12sp" />
            >
        <TextView
            android:id="@+id/Cupones"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cupones"
            android:textColor="@color/black"
            android:layout_marginHorizontal="56dp"
            android:textSize="12sp" />
        <TextView
            android:layout_toRightOf="@id/Cupones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Puntos"
            android:textColor="@color/black"
            android:textSize="12sp" />

    </RelativeLayout>

    <!--Información Personal -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:gravity="center"
        android:background="@color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="Información Personal"
            android:textColor="@color/black"
            android:textSize="24sp" />

        <RelativeLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="16dp"
            android:backgroundTint="@color/lightGray"
            android:background="@color/white">

            <TextView
                android:id="@+id/cel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/celular"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:paddingHorizontal="40dp"
                android:drawableLeft="@drawable/phone"/>
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:layout_below="@+id/cel"
                android:text="@string/correo"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:paddingHorizontal="40dp"
                android:drawableLeft="@drawable/email"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:text="@string/direccion"
                android:textColor="@color/black"
                android:textSize="21sp"
                android:paddingHorizontal="40dp"
                android:drawableLeft="@drawable/map_marker"/>

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/comprasButton"
            android:layout_marginTop="8dp"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="Mis compras"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:background="@drawable/button_buy_now"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cuponButton"
            android:layout_margin="8dp"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="Canjear cupón"
            android:textSize="20dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:background="@drawable/button_cupon"
            />

    </LinearLayout>

</LinearLayout>